add(apps/app01): Generate GC log